# SayLens

./: .gitignore  pyproject.toml
.claude/: launch.json
src/speech_feedback/: __init__.py  aligner.py  app.py  articulation.py  comparator.py  feedback.py  g2p.py  pipeline.py  recognizer.py  scorer.py  voice_cloner.py
tests/: test_comparator.py  test_g2p.py
